--- a/src/views/home.css
+++ b/src/views/home.css
@@ -7,6 +7,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: url("/images/main.jpg");
   background-repeat: no-repeat;
   background-size: cover;
