--- a/src/views/home.scss
+++ b/src/views/home.scss
@@ -3,8 +3,8 @@
     height:100vh;
     display: flex;
     justify-content: center;
-
-    background-image: url("/images/premium.jpg") ; 
+    align-items: center;
+    background-image: url("/images/main.jpg") ; 
     background-repeat: no-repeat;
     background-size: cover;
     h1{
